--- a/Navigation/navbar-search-box.html
+++ b/Navigation/navbar-search-box.html
@@ -13,7 +13,7 @@
         header.masthead{
             text-align: center;
             color:white;
-            background-image: url('~/img/header.jpg');
+            background-image: url('img/header.jpg');
             background-repeat: no-repeat;    
             background-attachment: scroll;
             background-position: center center;
