--- a/Typography/lists.html
+++ b/Typography/lists.html
@@ -94,6 +94,7 @@
             
             <hr class="mt-5">
             
+            <!--description list-->
             <dl class="row">
                 <dt class="col-sm-3">Alice</dt>
                 <dd class="col-sm-9">The main character who travels to wonderland</dd>
